2007-07-14  Vitaly Alexeev <tishka92@yahoo.com>

	Oops, fixed compilation error
	* gameswf/gameswf_environment.cpp
	* gameswf/gameswf_environment.h

2007-07-14  Vitaly Alexeev <tishka92@yahoo.com>

	Added get_register() & set_register(), 
	local_register_ptr is private now,
	unified log messages
	* gameswf/gameswf_action.cpp
	* gameswf/gameswf_button.cpp
	* gameswf/gameswf_environment.cpp
	* gameswf/gameswf_environment.h
	* gameswf/gameswf_function.cpp
	* gameswf/gameswf_impl.cpp
	* gameswf/gameswf_movie_def.cpp
	* gameswf/gameswf_object.cpp
	* gameswf/gameswf_sprite.cpp

2007-07-14  Vitaly Alexeev <tishka92@yahoo.com>

	The semantic of Flash class differs from semantic of C++.
	Flash instance variables is not private but public,
	all variables of new created object is therein,
	'private' keyword is meaningless
	* gameswf/gameswf_action.cpp
	* gameswf/gameswf_environment.h
	* gameswf/samples/test_superclass/circle.as
	* gameswf/samples/test_superclass/shape.as
	* gameswf/samples/test_superclass/test.fla
	* gameswf/samples/test_superclass/test.swf

2007-07-14  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/win32/VC8/gameswf.vcproj: removed unused linker input

2007-07-12  Vitaly Alexeev <tishka92@yahoo.com>

	The first attempt to implement the supporting of Subclass/Superclass
	* gameswf/gameswf.h
	* gameswf/gameswf_action.cpp
	* gameswf/gameswf_environment.cpp
	* gameswf/gameswf_environment.h
	* gameswf/gameswf_function.cpp
	* gameswf/gameswf_function.h
	* gameswf/gameswf_object.cpp
	* gameswf/gameswf_object.h
	* gameswf/gameswf_value.cpp
	* gameswf/samples/test_superclass
	* gameswf/samples/test_superclass/circle.as
	* gameswf/samples/test_superclass/shape.as
	* gameswf/samples/test_superclass/test.fla
	* gameswf/samples/test_superclass/test.swf

2007-07-12  Vitaly Alexeev <tishka92@yahoo.com>

	Static & dynamic text bug is fixed. The reason of this bug is the fact that 
	all the EMSquare coordinates in Flas8 are multiplied by 20 at export.